--- a/package.json
+++ b/package.json
@@ -11,17 +11,22 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/axios": "^0.14.0",
     "@types/d3-ease": "^2.0.0",
     "@types/jest": "^26.0.15",
+    "@types/js-cookie": "^2.2.6",
     "@types/material-ui": "^0.21.8",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.6",
+    "axios": "^0.21.1",
     "d3-ease": "^2.0.0",
     "delay": "^4.4.0",
+    "js-cookie": "^2.2.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-dropzone": "^11.3.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-spring": "^8.0.27",
